tests/baselines/reference/parserUnterminatedGeneric2.errors.txt
==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/parserUnterminatedGeneric2.ts (15 errors) ====
    declare module ng {
        interfaceICompiledExpression {
                                     ~
!!! error TS1005: ';' expected.
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'interfaceICompiledExpression'.
            (context: any, locals?: any): any;
                                             ~
!!! error TS1005: '=>' expected.
            assign(context: any, value: any): any;
                          ~
!!! error TS1005: ',' expected.
                                      ~
!!! error TS1005: ',' expected.
                                            ~
!!! error TS1005: ';' expected.
            ~~~~~~
!!! error TS2304: Cannot find name 'assign'.
                   ~~~~~~~
!!! error TS2304: Cannot find name 'context'.
                            ~~~
!!! error TS2304: Cannot find name 'any'.
                                 ~~~~~
!!! error TS2304: Cannot find name 'value'.
                                        ~~~
!!! error TS2304: Cannot find name 'any'.
                                              ~~~
!!! error TS2304: Cannot find name 'any'.
        }
    
        interface IQService {
            all(promises: IPromise < any > []): IPromise<
                                                         
!!! error TS1005: '>' expected.
                          ~~~~~~~~~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise'.
                                                ~~~~~~~~~
!!! error TS2304: Cannot find name 'IPromise'.